--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
-    "next": "13.4.4",
-    "postcss": "8.4.24",
+    "next": "^14.2.15",
+    "postcss": "^8.4.47",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.3",
